sfdx/force-app/main/default/objects/Financial_Transaction__c/Financial_Transaction__c.object-meta.xml
<CustomObject>
    <label>Financial Transaction</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>TransactionId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>