sfdx/force-app/main/default/objects/Financial_Transaction__c/fields/Monthly_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Tracker__c</fullName>
    <label>Monthly Tracker</label>
    <referenceTo>Monthly_Tracker__c</referenceTo>
    <relationshipLabel>Financial Transactions</relationshipLabel>
    <relationshipName>Financial_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>