sfdx/force-app/main/default/objects/Financial_Transaction__c/fields/Payment_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instrument__c</fullName>
    <label>Payment Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Instrument</valueSetName>
    </valueSet>
</CustomField>