sfdx/force-app/main/default/objects/Financial_Transaction__c/fields/Payment_Instrument_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instrument_Detail__c</fullName>
    <label>Payment Instrument Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>